--- a/tutorial_chromadb.ipynb
+++ b/tutorial_chromadb.ipynb
@@ -5,19 +5,7 @@
    "execution_count": 1,
    "id": "e7156610",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'chromadb'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mchromadb\u001b[39;00m\n\u001b[0;32m      3\u001b[0m client \u001b[38;5;241m=\u001b[39m chromadb\u001b[38;5;241m.\u001b[39mClient()\n\u001b[0;32m      4\u001b[0m collection \u001b[38;5;241m=\u001b[39m client\u001b[38;5;241m.\u001b[39mcreate_collection(name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmy_collection\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'chromadb'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import chromadb\n",
     "\n",
@@ -27,10 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6f35da91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nitesh\\.cache\\chroma\\onnx_models\\all-MiniLM-L6-v2\\onnx.tar.gz: 100%|██████████| 79.3M/79.3M [00:25<00:00, 3.33MiB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "collection.add(\n",
     "    documents=[\n",
@@ -43,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "023d55f8",
    "metadata": {},
    "outputs": [
@@ -52,11 +48,12 @@
       "text/plain": [
        "{'ids': ['id1', 'id2'],\n",
        " 'embeddings': None,\n",
-       " 'metadatas': [None, None],\n",
        " 'documents': ['This document is about New York',\n",
        "  'This document is about Delhi'],\n",
        " 'uris': None,\n",
-       " 'data': None}"
+       " 'included': ['metadatas', 'documents'],\n",
+       " 'data': None,\n",
+       " 'metadatas': [None, None]}"
       ]
      },
      "execution_count": 3,
@@ -71,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "669928f2",
    "metadata": {},
    "outputs": [
@@ -80,10 +77,11 @@
       "text/plain": [
        "{'ids': ['id1'],\n",
        " 'embeddings': None,\n",
-       " 'metadatas': [None],\n",
        " 'documents': ['This document is about New York'],\n",
        " 'uris': None,\n",
-       " 'data': None}"
+       " 'included': ['metadatas', 'documents'],\n",
+       " 'data': None,\n",
+       " 'metadatas': [None]}"
       ]
      },
      "execution_count": 4,
@@ -98,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "01f89e5b",
    "metadata": {
     "scrolled": true
@@ -108,16 +106,17 @@
      "data": {
       "text/plain": [
        "{'ids': [['id1', 'id2']],\n",
-       " 'distances': [[1.6312181949615479, 1.867558479309082]],\n",
-       " 'metadatas': [[None, None]],\n",
        " 'embeddings': None,\n",
        " 'documents': [['This document is about New York',\n",
        "   'This document is about Delhi']],\n",
        " 'uris': None,\n",
-       " 'data': None}"
+       " 'included': ['metadatas', 'documents', 'distances'],\n",
+       " 'data': None,\n",
+       " 'metadatas': [[None, None]],\n",
+       " 'distances': [[1.6312181949615479, 1.867558479309082]]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4492fd01",
    "metadata": {},
    "outputs": [
@@ -141,13 +140,14 @@
       "text/plain": [
        "{'ids': [],\n",
        " 'embeddings': None,\n",
-       " 'metadatas': [],\n",
        " 'documents': [],\n",
        " 'uris': None,\n",
-       " 'data': None}"
+       " 'included': ['metadatas', 'documents'],\n",
+       " 'data': None,\n",
+       " 'metadatas': []}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "197e4bad",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d25c8d29",
    "metadata": {},
    "outputs": [
@@ -187,17 +187,18 @@
      "data": {
       "text/plain": [
        "{'ids': [['id4', 'id3']],\n",
-       " 'distances': [[1.5588479042053223, 1.8114912509918213]],\n",
-       " 'metadatas': [[{'url': 'https://en.wikipedia.org/wiki/New_Delhi'},\n",
-       "   {'url': 'https://en.wikipedia.org/wiki/New_York_City'}]],\n",
        " 'embeddings': None,\n",
        " 'documents': [['This document is about Delhi',\n",
        "   'This document is about New York']],\n",
        " 'uris': None,\n",
-       " 'data': None}"
+       " 'included': ['metadatas', 'documents', 'distances'],\n",
+       " 'data': None,\n",
+       " 'metadatas': [[{'url': 'https://en.wikipedia.org/wiki/New_Delhi'},\n",
+       "   {'url': 'https://en.wikipedia.org/wiki/New_York_City'}]],\n",
+       " 'distances': [[1.5588479042053223, 1.8114913702011108]]}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
